<resources>
    <string name="app_name">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify">Verify</string>
    <string name="dummy_search_header">עדיין מתלבטים? בדקו מה דיירים
קודמים חושבים על הדירה...</string>
    <string name="dummy_search_hint">*יש להזין מהי הכתובת המלאה</string>
    <string name="dummy_search_button_text">מהי כתובת הדירה?</string>
    <string name="full_address_hint">יש להזין מהי הכתובת המלאה</string>
    <string name="add_apartment_title">יצא לך לשכור דירה?</string>
    <string name="add_apartment_detail">מעולה! סקרנים לשמוע איך היה לגור בה,
    ומה חשוב לדעתך לספר לפני שלב החתימה</string>

    <string name="city_field_title">עיר</string>
    <string name="street_field_title">רחוב</string>
    <string name="building_field_title">בית</string>
    <string name="floor_field_title">קומה</string>
    <string name="apartment_field_title">דירה</string>
    <string name="search_button_text">חיפוש</string>
    <string name="add_opinion_text">הוספת חוות דעת</string>
    <string name="invalid_search_message">לא מצאנו את הדירה שביקשת :(</string>

    <string name="apartment_profile_address_placeholder">רחוב לורם איפסום 27, באר שבע</string>
    <string name="apartment_profile_apartment">דירה</string>
    <string name="apartment_profile_apartment_placeholder">14</string>
    <string name="apartment_profile_floor">קומה</string>
    <string name="apartment_profile_floor_placeholder">7</string>
    <string name="apartment_profile_general_review_title">שיקלול הדירוגים של דיירי העבר</string>
    <string name="apartment_profile_reviews_placeholder">(3 ביקורות)</string>
    <string name="apartment_profile_apartment_holder">בעל/ת הדירה</string>
    <string name="apartment_profile_apartment_holder_rating_placeholder">4.0</string>
    <string name="apartment_profile_maintenance">תחזוקה</string>
    <string name="apartment_profile_maintenance_rating_placeholder">4.0</string>
    <string name="apartment_profile_around">מסביב לדירה</string>
    <string name="apartment_profile_around_rating_placeholder">3.5</string>
    <string name="apartment_profile_general_rating_placeholder">4</string>

    <string name="apartment_profile_review_shortcut_tenant_kind">דייר/ת יחיד/ה</string>

    <string name="introduction_layout_1_title">מצאת את הדירה שאהבת?</string>
    <string name="introduction_layout_1_content">הזינו את כתובתה המלאה כולל עיר מגורים,
    שם הרחוב, מס\' בניין, קומה ודירה</string>
    <string name="introduction_layout_2_title">הגיע הזמן להכיר אותה לעומק</string>
    <string name="introduction_layout_2_content">קבלו גישה להיסטוריית הדירה
    המבוססת על נסיונם של דיירים
    קודמים</string>
    <string name="introduction_layout_3_title">חושבים שהיא האחת?</string>
    <string name="introduction_layout_3_content">בזכות הקהילה שלנו, תוכלו לוודא האם
    זו הדירה הנכונה ביותר, שתוכל להבטיח
    בטחון, וודאות ושקט נפשי לטווח ארוך</string>
    <string name="introduction_layout_button_text">Let\'s Verify</string>
    <string name="introduction_layout_skip_text">דלג\\י</string>

    <string name="apartment_review_tab_title_1">מבט כולל</string>
    <string name="apartment_review_tab_title_2">יתרונות וחסרונות</string>
    <string name="apartment_review_tab_title_3">חוות דעת</string>
    <string name="apartment_review_tab_title_4">שורה תחתונה</string>
    <string name="apartment_review_tab_title_5">דעות נוספות</string>
    <string name="apartment_review_tenant_type_placeholder">דייר/ת יחיד/ה</string>
    <string name="apartment_review_tenant_stay_placeholder">(15 חודשים)</string>
    <string name="apartment_review_entry_title">כניסה:</string>
    <string name="apartment_review_leave_title">יציאה:</string>
    <string name="apartment_review_entry_date_placeholder">ינואר 2020</string>
    <string name="apartment_review_leave_date_placeholder">אפריל 2021</string>
    <string name="apartment_review_review_title">דירוג הדירה עפ"י הדייר/ת</string>
    <string name="apartment_review_pros_placeholder">יתרונות (17)</string>
    <string name="apartment_review_cons_placeholder">חסרונות (9)</string>
    <string name="apartment_review_pros_cons_group_1_title">בעל/ת הדירה</string>
    <string name="apartment_review_pros_cons_group_2_title">תחזוקה</string>
    <string name="apartment_review_pros_cons_group_3_title">מסביב לדירה</string>
    <string-array name="apartment_review_pros_group_1_placeholder">
        <item>חוזה - סטנדרטי והוגן</item>
        <item>כניסה של בעלי חיים - מאפשר</item>
        <item>דמי שכירות - הוגנים ביחס לסביבה</item>
    </string-array>
    <string name="apartment_review_pros_cons_group_2_subtitle_1">כללי</string>
    <string name="apartment_review_pros_cons_group_2_subtitle_2">מטבח</string>
    <string name="apartment_review_pros_cons_group_2_subtitle_3">שירותים/מקלחת</string>
    <string-array name="apartment_review_pros_group_2_sub_1_placeholder">
        <item>מיזוג אוויר - טוב, אין בעיות מיוחדות</item>
        <item>בידוד אקוסטי - הדירה מבודדת רעשים</item>
        <item>עובש ורטיבות - אין בכלל בעיות מסוג זה</item>
    </string-array>
    <string-array name="apartment_review_pros_group_2_sub_2_placeholder">
        <item>בעיות בצנרת וסתימות - בתדירות נמוכה</item>
        <item>נוחות יומיומית - תענוג, מרווח מאוד</item>
        <item>אחסון - לא חסר מקום</item>
    </string-array>
    <string-array name="apartment_review_pros_group_2_sub_3_placeholder">
        <item>זרם המים - לא יכולתי לבקש טוב יותר</item>
        <item>בעיות אינסטלציה - לא נתקלתי</item>
        <item>דוד שמש - מעולה, מתחמם מהר</item>
    </string-array>
    <string-array name="apartment_review_pros_group_3_placeholder">
        <item>עבודות בניה - אין בכלל באזור</item>
        <item>נגישות לבעלי מוגבלויות - קיימת</item>
        <item>תחב"צ - קרובה לרכבת ויש תחנות אוטובוס באזור</item>
        <item>חנייה - אפשרי למצוא באזור</item>
        <item>גינות כלבים ופארקים - אפשרי למצוא באזור</item>
    </string-array>
    <string-array name="apartment_review_cons_group_1_placeholder">
        <item>לא זמין כשצריך אותו</item>
        <item>לא דואג לתחזוקה של הדירה</item>
        <item>לא נעים להתנהל מולו</item>
    </string-array>
    <string-array name="apartment_review_cons_group_2_sub_1_placeholder">
        <item>קליטת אינטרנט וסלולר לא טובה</item>
        <item>הדירה לא מבודדת קור כמו שצריך</item>
        <item>חם נורא בקיץ, אין בידוד חום</item>
    </string-array>
    <string-array name="apartment_review_cons_group_2_sub_2_placeholder">
        <item>ריק לכרגע</item>
    </string-array>
    <string-array name="apartment_review_cons_group_2_sub_3_placeholder">
        <item>ריק לכרגע</item>
    </string-array>
    <string-array name="apartment_review_cons_group_3_placeholder">
        <item>שכנים רעשניים מאוד</item>
        <item>אין הרבה סופרמרקטים באזור</item>
        <item>אין בכלל ברים ומסעדות באזור</item>
    </string-array>


    <string name="apartment_review_opinion_title">חוות דעת ומידע נוסף שחשוב לראות</string>
    <string name="apartment_review_opinion_count_placeholder">(3)</string>

    <string name="opinion_type_subtitle_placeholder">התנהלות כללית</string>
    <string name="opinion_content_placeholder">"למרות שהחוזה הוגן וסטנדרטי לאזור, ההתנהלות היומיומית עם בעל הדירה הייתה קשה ומתסכלת... צריך לנדנד לו מלא כדי שיתייחס</string>
    <string name="opinion_offensive_content_alert_text">דיווח על תוכן פוגעני</string>

    <string name="bottom_line_title">בשורה התחתונה, מה אתם אומרים?</string>
    <string name="bottom_line_subtitle">אחרי שקראת, חוות הדעת עזרה לך?</string>
    <string name="bottom_line_green_circle_text">לגמרי</string>
    <string name="bottom_line_red_circle_text">פחות</string>

    <string name="missing_information_title">חסר לדעתך מידע?</string>

    <string name="more_reviews_title_prefix">דעות נוספות על</string>
    <string name="more_reviews_title_suffix_placeholder">מונטיפיורי 22, דירה 14, קומה 7</string>

    <string name="verify_form_url">https://k19r9nbtgpr.typeform.com/to/d7AGRRud</string>
</resources>