<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    tools:context=".fragments.ApartmentReviewOverviewFragment">

    <TextView
        android:id="@+id/apartment_review_tenant_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:text="@string/apartment_review_tenant_type_placeholder"
        android:textColor="@color/black"
        android:textFontWeight="500" />

    <TextView
        android:id="@+id/apartment_review_tenant_stay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/apartment_review_tenant_type"
        android:layout_marginEnd="10dp"
        android:text="@string/apartment_review_tenant_stay_placeholder"
        android:textColor="@color/black"
        android:textFontWeight="300" />

    <TextView
        android:id="@+id/apartment_review_entry_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apartment_review_tenant_type"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/apartment_review_tenant_type"
        android:text="@string/apartment_review_entry_title"
        android:textColor="@color/black"
        android:textFontWeight="300" />

    <TextView
        android:id="@+id/apartment_review_leave_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/apartment_review_tenant_type"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/apartment_review_entry_title"
        android:layout_marginEnd="80dp"
        android:text="@string/apartment_review_leave_title"
        android:textColor="@color/black"
        android:textFontWeight="300" />

    <RelativeLayout
        android:layout_width="87dp"
        android:layout_height="24dp"
        android:background="@drawable/edit_text_background_2"
        android:elevation="1dp"
        android:id="@+id/apartment_review_entry_date_container"
        android:layout_below="@id/apartment_review_entry_title"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/apartment_review_tenant_type"
        android:text="@string/apartment_review_entry_title"
        android:textColor="@color/black"
        android:textFontWeight="300" >

        <RelativeLayout
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/entry_rectangle_fill" />

        <TextView
            android:id="@+id/apartment_review_entry_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/apartment_review_entry_date_placeholder"
            android:textColor="@color/black"
            android:textFontWeight="300" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="87dp"
        android:layout_height="24dp"
        android:background="@drawable/edit_text_background_2"
        android:elevation="1dp"
        android:id="@+id/apartment_review_leave_date_container"
        android:layout_below="@id/apartment_review_entry_title"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/apartment_review_leave_title"
        android:text="@string/apartment_review_entry_title"
        android:textColor="@color/black"
        android:textFontWeight="300" >

        <RelativeLayout
            android:layout_width="7dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/leave_rectangle_fill" />

        <TextView
            android:id="@+id/apartment_review_leave_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/apartment_review_leave_date_placeholder"
            android:textColor="@color/black"
            android:textFontWeight="300" />
    </RelativeLayout>





</RelativeLayout>