<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddApartmentFragment">

    <ImageView
        android:layout_width="274dp"
        android:layout_height="152dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="125dp"
        android:src="@drawable/ic_add_apartment_drawing" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="128dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="369dp"
        android:text="@string/add_apartment_title"
        android:textAppearance="@style/add_apartment_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="420dp"
        android:lineSpacingExtra="6sp"
        android:textAlignment="center"
        android:text="@string/add_apartment_detail"
        android:textAppearance="@style/add_apartment_detail"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_apr_review_button"
        android:layout_width="237dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="529dp"
        android:background="@drawable/button_background_1"
        android:text="@string/add_opinion_text"
        android:textAppearance="@style/add_opinion_text"
        android:elevation="20dp" />




</RelativeLayout>