<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/opinionX"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:elevation="5dp"
    android:background="@drawable/opinion_medium_background">

    <RelativeLayout
        android:id="@+id/opinion_header"
        android:layout_width="270dp"
        android:layout_height="54dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:elevation="1dp"
        android:background="@drawable/opinion_strong_background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@drawable/ic_rectangle_231" />

        <TextView
            android:id="@+id/opinion_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:text="@string/apartment_profile_apartment_holder"
            android:textAppearance="@style/opinion_type_title"
            android:lineSpacingExtra="0sp"
            android:translationY="-0.11sp"
            android:gravity="right|top"
            />

        <ImageView
            android:id="@+id/opinion_type_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="23dp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_opinion_householder" />

        <TextView
            android:id="@+id/opinion_type_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/opinion_type_title"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="12dp"
            android:gravity="right|top"
            android:lineSpacingExtra="3sp"
            android:text="@string/opinion_type_subtitle_placeholder"
            android:textAppearance="@style/opinion_type_subtitle"
            android:translationY="-1.3sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/opinion_content"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/opinion_header"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="right|top"
        android:lineSpacingExtra="6sp"
        android:text="@string/opinion_content_placeholder"
        android:textAppearance="@style/opinion_content"
        android:translationY="-2.88sp" />


</RelativeLayout>